[package]
name = "toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
regex = { version = "1.10", optional = true }
ammonia = { version = "4.1.2", optional = true }
surrealdb = { version = "2.3.10", optional = true }
# uuid = { version = "1.18.0", features = ["v4", "serde"] }
# serde_json = "1.0.143"
# chrono = { version = "0.4.41", features = ["serde"] }

[features]
ip               = []
dxui             = ["dioxus"]
result           = ["serde"]
validation       = ["regex"]
sanitize         = ["ammonia"]
surreal          = ["surrealdb"]
# result_with_dx   = ["dioxus"]
